force-app/main/default/objects/QuoteLineItem/fields/OM_VID_Incoterms__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_Incoterms__c</fullName>
    <label>Incoterms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DAP</fullName>
                <default>true</default>
                <label>DAP</label>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
            <value>
                <fullName>EX WORKS</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>CIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>