force-app/main/default/objects/QuoteLineItem/fields/OpportunityLineID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineID__c</fullName>
    <description>ID of the Opportunity Line Item that this Quote Line Item relates to.</description>
    <formula>OpportunityLineItem.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ID of the Opportunity Line Item that this Quote Line Item relates to.</inlineHelpText>
    <label>Opportunity Line ID</label>
    <type>Text</type>
</CustomField>