force-app/main/default/objects/QuoteLineItem/fields/Volume_000s_without_decimal__c.field-meta.xml
<CustomField>
    <fullName>Volume_000s_without_decimal__c</fullName>
    <formula>Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume (000&apos;s) excluding decimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>